--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div id="custom-cursor"></div>
     
     <div class="container">
-        <h1 id="message">Sophie Wang, Will you be my valentine?</h1>
+        <h1 id="message">Sophie, Will you be my valentine?</h1>
         
         <div class="button-container" id="button-container">
             <button id="yes-btn">Yes</button>
